<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".LoginSignUpActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ImageView
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:src="@mipmap/ic_journal_image_light"
        android:rotation="-135"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <ImageView
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:src="@mipmap/ic_journal_image_light"
        android:rotation="-135"
        android:contentDescription="Image"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@mipmap/ic_pen_image_light"
        android:rotation="-185"
        android:contentDescription="Image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <LinearLayout
        android:id="@+id/login_container"
        android:layout_width="253dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/opensans_extrabolditalic"
            android:gravity="center_horizontal"
            android:text="Jono"
            android:id="@+id/login_app_name"
            android:textColor="@color/colorPrimary"
            android:textSize="40sp" />

        <View
            android:layout_width="60dp"
            android:layout_height="2dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginRight="-8dp"
            android:layout_marginTop="-8dp"
            android:background="@color/colorPrimary" />

        <View
            android:layout_width="1dp"
            android:layout_height="40dp"/>

        <EditText
            android:id="@+id/et_login_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/et_background"
            android:fontFamily="@font/opensans_regular"
            android:hint="Email"
            android:inputType="textEmailAddress"
            android:paddingLeft="8dp" />

        <EditText
            android:id="@+id/et_login_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/et_background"
            android:fontFamily="@font/opensans_regular"
            android:hint="password"
            android:inputType="textPassword"
            android:paddingLeft="8dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:id="@+id/switch_to_sign_up_text"
                android:fontFamily="@font/opensans_semibold"
                android:onClick="switchToSignUp"
                android:text="Sign Up" />

            <Button
                android:visibility="visible"
                android:id="@+id/button_login"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:background="@drawable/round_button_fill"
                android:text="Login"
                android:onClick="loginUser"
                android:textAllCaps="false"
                android:textColor="@color/white" />

            <RelativeLayout
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:visibility="gone"
                android:background="@drawable/round_button_fill"
                android:layout_alignParentEnd="true"
                android:id="@+id/progress_container">

                <com.github.rahatarmanahmed.cpv.CircularProgressView
                    android:id="@+id/progress_view"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerInParent="true"
                    app:cpv_animAutostart="true"
                    app:cpv_indeterminate="true"
                    app:cpv_color="@color/white" />

            </RelativeLayout>

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:visibility="invisible"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/sign_up_container"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal"
            android:text="Joono"
            android:fontFamily="@font/opensans_extrabolditalic"
            android:textSize="40sp"
            android:textColor="@color/colorPrimary"/>

        <View
            android:layout_width="60dp"
            android:layout_height="2dp"
            android:layout_gravity="center_horizontal"
            android:background="@color/colorPrimary"
            android:layout_marginTop="-8dp"
            android:layout_marginRight="-8dp"/>

        <View
            android:layout_width="1dp"
            android:layout_height="20dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/et_sign_up_email"
            android:inputType="textEmailAddress"
            android:hint="Email"
            android:paddingLeft="8dp"
            android:fontFamily="@font/opensans_regular"
            android:background="@drawable/et_background"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/et_sign_up_password"
            android:inputType="textPassword"
            android:layout_marginTop="16dp"
            android:hint="password"
            android:fontFamily="@font/opensans_regular"
            android:paddingLeft="8dp"
            android:background="@drawable/et_background"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/et_sign_up_password_repeat"
            android:inputType="textPassword"
            android:layout_marginTop="16dp"
            android:hint="Repeat password"
            android:fontFamily="@font/opensans_regular"
            android:paddingLeft="8dp"
            android:background="@drawable/et_background"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="Login"
                android:id="@+id/change_to_login"
                android:onClick="switchToLogin"
                android:fontFamily="@font/opensans_semibold"/>

            <Button
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:background="@drawable/round_button_fill"
                android:text="Sign Up"
                android:id="@+id/button_signup"
                android:onClick="signUpUser"
                android:textAllCaps="false"
                android:textColor="@color/white"/>

            <RelativeLayout
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:visibility="visible"
                android:background="@drawable/round_button_fill"
                android:layout_alignParentEnd="true"
                android:id="@+id/sign_up_progress_container">

                <com.github.rahatarmanahmed.cpv.CircularProgressView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerInParent="true"
                    app:cpv_animAutostart="true"
                    app:cpv_indeterminate="true"
                    app:cpv_color="@color/white" />

            </RelativeLayout>

        </RelativeLayout>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/opensans_semibold"
        android:id="@+id/tv_messages"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="40dp"
        android:textColor="@android:color/holo_red_dark"
        android:text="@string/login_success"/>

</android.support.constraint.ConstraintLayout>